clusters/taplab/cluster-config/app-resources/gateway-instance-configuration/gateway-operator/gateway-operator-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: gateway-operator
  namespace: spring-cloud-gateway
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: scg-openapi-service
      port: 80
  virtualhost:
    fqdn: scg.a5.fynesy.com
    tls:
      secretName: taptlscert
